--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "server.js",
   "dependencies": {
     "chai": "^4.2.0",
+    "chai-dom": "^1.8.1",
     "chai-http": "^4.3.0",
     "express": "^4.16.4",
     "mocha": "^6.1.4"
